--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.86.3",
     "@react-three/fiber": "^8.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.156.1"
   },
   "devDependencies": {
-    "@types/three": "^0.156.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.156.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
